add: intial Material-UI for index page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,61 +1,8 @@
-p {
+html { 
+  overflow-x: hidden;
   line-height: 1.5em;
 }
 
-footer.page-footer {
-  padding-top: 0;
-}
-
-.dark {
-  background: #212121 !important;
-  color: white !important;
-}
-
-.dark .black-text {
-  color: white !important;
-}
-
-/*
-.dark #image {
-  filter: invert();
-}
-*/
-
-.dark .sidenav {
-  background: #616161;
-}
-
-.dark .sidenav a {
-  color: white !important;
-}
-.dark tr {
-  border-bottom: 1px solid rgba(255, 255, 255, 0.12);
-}
-.dark .btn.disabled {
-  background-color: #424242 !important;
-  color: #bdbdbd !important;
-}
-
-.dark .collapsible {
-  box-shadow: 0 2px 2px 0 rgb(255 255 255 / 14%), 0 3px 1px -2px rgb(255 255 255 / 12%), 0 1px 5px 0 rgb(255 255 255 / 20%);
-  border:#424242 !important;
-}
-
-
-.dark .collapsible-header.active {
-  background: #424242;
-}
-
-.dark .collapsible-header,
-.dark .collapsible-body {
-  background: #212121;
-  border-bottom:1px solid #424242 !important;
-}
-
-.feather {
-  transform: translateY(0.2rem) scale(0.85)
-}
-
-.icon-small {
-  transform: translateY(.3em) scale(.65)
+.MuiSvgIcon-root {
+  transform: translateY(5px);
 }
