--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,3 +13,7 @@ body {
 pre {
   padding: 1em;
 }
+
+code {
+  font-family: Inconsolata, Monaco, Consolas, "Andale Mono", "Ubuntu Mono", "Courier New", Courier, monospace !important;
+}
